--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Yoan Dorny'
+  github_nickname: 'YoanDo'
+- name: 'Thibault Jaime'
+  github_nickname: 'jaimethibault'
