airbnb middleman with style

--- a/data/surfcamps.yml
+++ b/data/surfcamps.yml
@@ -1,20 +1,60 @@
-- name: 'Eden Surf Maroc'
+edensurfmaroc:
+  name: 'Eden Surf Maroc'
   description: 'Taghazout best surfcamp'
   category: 'Popular'
   image_path: 'surf_camp_1.png'
   user_image_path : 'user_1.png'
-- name: 'Free Surf Maroc'
+freesurfmaroc:
+  name: 'Free Surf Maroc'
   description: 'Perfect for beginners and students'
   category: 'Promo'
   image_path: 'surf_camp_2.png'
   user_image_path : 'user_2.png'
-- name: 'Manu Surfcamp'
+manusurfcamp:
+  name: 'Manu Surfcamp'
   description: 'Guiding and Advanced surfing'
   category: 'Popular'
   image_path: 'surf_camp_3.png'
   user_image_path : 'user_3.png'
-- name: 'Aloha Surfcamp'
+alohasurfcamp:
+  name: 'Aloha Surfcamp'
   description: 'Yoga and Surf'
   category: 'New'
   image_path: 'surf_camp_4.png'
+  user_image_path : 'user_4.png'
+marocsurfcamp:
+  name: 'Maroc Surfcamp'
+  description: 'Tajines & Bodyboard'
+  category: 'New'
+  image_path: 'surf_camp_5.png'
+  user_image_path : 'user_5.png'
+crocro:
+  name: 'Crocro Surfcamp'
+  description: 'Camel and surf'
+  category: 'New'
+  image_path: 'surf_camp_6.png'
+  user_image_path : 'user_6.png'
+zensurf:
+  name: 'Zen Surf'
+  description: 'Surf inchallah'
+  category: 'New'
+  image_path: 'surf_camp_7.png'
+  user_image_path : 'user_5.png'
+360surf:
+  name: '360 surf'
+  description: 'Hardcore surf'
+  category: 'New'
+  image_path: 'surf_camp_8.png'
+  user_image_path : 'user_3.png'
+surferparadise:
+  name: 'Surfers Paradise'
+  description: 'Yoga and Surf'
+  category: 'New'
+  image_path: 'surf_camp_9.png'
+  user_image_path : 'user_4.png'
+prosurfmarocco:
+  name: 'Pro Surf Marocco'
+  description: 'Yoga and Surf'
+  category: 'New'
+  image_path: 'surf_camp_1.png'
   user_image_path : 'user_4.png'
